--- a/internship_system/placement/templates/admin/admin_base.html
+++ b/internship_system/placement/templates/admin/admin_base.html
@@ -217,7 +217,7 @@ a:hover {
                                 <li><a href="{% url 'admin_internship_placements_list' %}" id="contact-link"><span class="icon solid fa-map-marker-alt">  Placements</span></a></li>
                                 <li><a href="{% url 'admin_attendance_list' %}" id="contact-link"><span class="icon solid fa-calendar-check">  Attendance Module</span></a></li>
                                 <li><a href="{% url 'admin_logbooks_manage' %}" id="contact-link"><span class="icon solid fa-book">  Logbooks Module</span></a></li>
-                                <li><a href="{% url 'admin' %}" id="contact-link"><span class="icon solid fa-star">  Evaluation Module</span></a></li>
+                                <li><a href="{% url 'admin_evaluations_manage' %}" id="contact-link"><span class="icon solid fa-star">  Evaluation Module</span></a></li>
 								<li><a href="{% url 'notifications' %}"><span class="icon solid fa-bell">  Notifications</span></a></li>
 							</ul>
 						</nav>
